получение данных из  и отображение с помощью компонента DataTable

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico">
       <link rel="stylesheet" href="src/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>KINOMOV Cinema</title>
   </head>
   <body class="m-2">
     <div id="app"></div>
